# Plugin-fork

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  SV-Abid.rb
.github/workflows/: build-release.yml  ci.yml
SV-Abid/config/: constants.rb  fsi-config.json
SV-Abid/core/: abid_setback.rb
SV-Abid/helpers/: datapoints.rb  hash_utils.rb
SV-Abid/observers/: appObserver.rb  modelObserver.rb  toolsObserver.rb
SV-Abid/ui/: dialog.html  display_ui.rb  input_ui.rb
docs/: Architecture.md  ShippingGuide.md  choice.md  phase-1-to-4-architecture.md
docs/phase-1-to-4-architecture/: 01-reverse-engineering.md  02-domain-analysis.md  03-python-architecture.md  04-migration-strategy.md  05-decisions-log.md  README.md
docs/phase-5-sprints/: README.md  sprint-00-pre-sprint.md  sprint-01-foundation.md  sprint-02-auth.md  sprint-03-domain-rules-fsi.md  sprint-04-setback-coverage-parking.md  sprint-05-overlays-height.md  sprint-06-live-validation.md  sprint-07-mumbai-pack.md  sprint-08-reporting.md  sprint-09-persistence.md  sprint-10-diff.md  sprint-11-plugin-history.md  sprint-12-cleanup-ci-020.md  sprint-13-projects-entity.md
legacy/: README.md
legacy/SV-Abid/: abid_start.rb  main.rb
legacy/SV-Abid/config/: fsi-config.json  rules.json  setback-config.json
legacy/SV-Abid/core/: abid_fsi.rb  calculations.rb
legacy/SV-Abid/observers/: entitiesObserver.rb
legacy/SV-Abid/ui/: dialog.js
planara_engine/: .env.example  README.md  planara_engine.spec  pyproject.toml
planara_engine/src/planara_engine/: __init__.py  cli.py
planara_engine/src/planara_engine/api/: app.py  errors.py  middleware.py  routes_auth.py  routes_health.py  routes_history.py  routes_projects.py  routes_reports.py  routes_validate.py
planara_engine/src/planara_engine/auth/: deps.py  passwords.py  service.py  tokens.py
planara_engine/src/planara_engine/compliance/: __init__.py  coverage.py  fsi.py  height.py  lift_required.py  params.py  parking.py  room_height.py  setback.py
planara_engine/src/planara_engine/core/: errors.py  logging.py  settings.py
planara_engine/src/planara_engine/domain/: __init__.py  building.py  geometry.py  plot.py  project.py  project_context.py  snapshot.py  violation.py
planara_engine/src/planara_engine/engine/: __init__.py  registry.py  rule_engine.py
planara_engine/src/planara_engine/geometry/: __init__.py  normalize.py  operations.py
planara_engine/src/planara_engine/persistence/: database.py  models.py  projects.py  reports.py  repository.py
planara_engine/src/planara_engine/reporting/: __init__.py  archive.py  diff.py  diff_html.py  html_renderer.py
planara_engine/src/planara_engine/rules/: __init__.py  loader.py  schema.py
planara_engine/src/planara_engine/rules/packs/: bangalore-0.1.0.json  bangalore-0.2.0.json  bangalore-0.3.0.json  bangalore-0.4.0.json  mumbai-0.1.0.json  mumbai-0.2.0.json
planara_engine/tests/: conftest.py
planara_engine/tests/integration/: test_auth_routes.py  test_health.py  test_history.py  test_projects.py  test_reports.py  test_validate.py  test_validate_mumbai.py
planara_engine/tests/unit/: test_auth_service.py  test_bangalore_pack.py  test_cli.py  test_coverage.py  test_diff.py  test_domain_models.py  test_engine.py  test_errors.py  test_fsi.py  test_geometry.py  test_height.py  test_mumbai_pack.py  test_packs_smoke.py  test_parking.py  test_passwords.py  test_persistence.py  test_persistence_reports.py  test_projects_repository.py  test_reporting.py  test_reports_repository.py  test_rules.py  test_setback.py  test_settings.py  test_tokens.py
planara_plugin/: README.md  loader.rb
planara_plugin/planara/: boot.rb  config.rb  engine_client.rb  engine_supervisor.rb  limits_cache.rb  logger.rb  session.rb  update_checker.rb
planara_plugin/planara/geometry/: extractor.rb  quick_checks.rb  units.rb
planara_plugin/planara/observers/: in_design_observer.rb  live_validator.rb
planara_plugin/planara/ui/: browser_view.rb  history_dialog.rb  login_dialog.rb  project_picker.rb  results_dialog.rb
planara_plugin/planara/ui/assets/: history.html  login.html  results.html
planara_plugin/test/: test_engine_client.rb  test_extractor.rb  test_units.rb
scripts/: build_rbz.py
