[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planara-engine"
version = "0.3.0"
description = "Planara compliance engine — FastAPI service that validates building designs against municipal byelaws."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Planara" }
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "shapely>=2.0",
    "numpy>=1.26",
    "sqlmodel>=0.0.16",
    "bcrypt>=4.1",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "hypothesis>=6.98",
    "ruff>=0.3",
    "mypy>=1.9",
    "types-PyYAML",
]

[project.scripts]
planara-engine = "planara_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"planara_engine" = ["py.typed", "rules/packs/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
    # Python 3.14 + sqlite3 finalizer interplay surfaces as an
    # "unraisable" warning during Session/engine teardown even on a
    # clean rollback. Harmless in tests; ignored here so we keep
    # warnings-as-errors for everything else.
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# Strict subset that the codebase actually passes. The wider set
# (TC*, ANN, full RUF) is valuable but its violations are mostly
# stylistic; tightening incrementally beats blocking CI on prose.
select = [
    "E", "F", "W",     # pycodestyle / pyflakes
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "SIM",              # simplify
    "C4",               # comprehensions
]
ignore = [
    "B017",     # `pytest.raises(Exception)` is fine in narrow probe tests
    "SIM117",   # nested `with` is clearer than a single chained one in some setUps
]

[tool.ruff.lint.per-file-ignores]
# Inline CSS literals in the HTML renderers exceed 120 cols for
# layout-significant rules. Reflowing them obscures the CSS.
"src/planara_engine/reporting/html_renderer.py" = ["E501"]
"src/planara_engine/reporting/diff_html.py" = ["E501"]
# Test signatures often run long because of many keyword defaults
# that document the fixture's call surface.
"tests/**" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Shapely's stubs (types-shapely) are partial and lag the runtime;
# adding them would force the evaluators into casts that don't add
# safety. Treat it as untyped at the seam — the wrapper in
# geometry/normalize.py is the only place Shapely is touched.
module = "shapely.*"
ignore_missing_imports = true
